--- a/step-05/package.json
+++ b/step-05/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
-    "node-static": "^0.7.10",
+    "express": "^4.16.4",
     "socket.io": "^2.0.4"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
